# rwordlistctl

./: .Dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md
completions/: _rwordlistctl  _rwordlistctl.ps1  rwordlistctl.bash  rwordlistctl.elv  rwordlistctl.fish
config/: config.toml  repo.toml  test.toml
man/: rwordlistctl.1
src/: args.rs  cli.rs  commands.rs  config.rs  data.rs  fetch.rs  main.rs  repo.rs  units.rs
