[package]
name = "rwordlistctl"
version = "0.10.0-alpha.1.5.0"
edition = "2021"
authors = ["Sable-20", "blackarch"]
description = "Rust rewrite of wordlistctl: Fetch, install and search wordlist archives from websites."
license = "GPLv3"
license-file = "LICENSE"
repository = "https://github.com/Sable-20/rwordlistctl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.3", features = ["cargo", "derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.3"
log = "0.4.21"
pretty_env_logger = "0.5.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"

[build-dependencies]
clap_mangen = "0.2.20"
